...
) {
    Scaffold(
        floatingActionButton = {
            FloatingActionButton(onClick = {
                onEvent(ItemEvent.ShowDialog)
            }) {
                Icon(Icons.Default.Add, contentDescription = "Add TODO")
            }
        },
    ) { padding ->
        if (state.isAddingItem) {
            AddItemDialog(
                state = state,
...
                            fontSize = 12.sp,
                        )
                    }
                    IconButton(onClick = { navController.navigate(Screen.ItemEditScreen.route + "/${item.id}") }) {
                        Icon(
                            imageVector = Icons.Rounded.Edit,
                            contentDescription = "Edit TODO",
                        )
                    }
                    IconButton(onClick = {
                        onEvent(ItemEvent.DeleteItem(item))
                    }) {
                        Icon(
...
